src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__future_annotations_pep_585_p37.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UsePEP585Annotation: List
  location:
    row: 34
    column: 17
  end_location:
    row: 34
    column: 21
  fix:
    content: list
    location:
      row: 34
      column: 17
    end_location:
      row: 34
      column: 21
  parent: ~

