src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__future_annotations_pep_585_py310.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UsePEP585Annotation: List
  location:
    row: 34
    column: 17
  end_location:
    row: 34
    column: 21
  fix:
    content: list
    location:
      row: 34
      column: 17
    end_location:
      row: 34
      column: 21
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 35
    column: 8
  end_location:
    row: 35
    column: 12
  fix:
    content: list
    location:
      row: 35
      column: 8
    end_location:
      row: 35
      column: 12
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 42
    column: 26
  end_location:
    row: 42
    column: 30
  fix:
    content: list
    location:
      row: 42
      column: 26
    end_location:
      row: 42
      column: 30
  parent: ~
- kind:
    UsePEP585Annotation: List
  location:
    row: 42
    column: 37
  end_location:
    row: 42
    column: 41
  fix:
    content: list
    location:
      row: 42
      column: 37
    end_location:
      row: 42
      column: 41
  parent: ~

